<resources>
    <string name="app_name">Hostel</string>
    <string name="hostel">RKU HOSTEL</string>
    <string name="hostel_app">Hostel App</string>
    <string name="student">Student</string>
    <string name="rku_Address">Bhavagar Highway , Kasturbadham , Rajkot. Mo :9909952030 /31</string>
    <string name="boy_girl_hostel">Boy / Girl Hostel</string>
    <string name="sr_no">Sr No :</string>
    <string name="form_name">Name :</string>
    <string name="form_enrollment_no">Enrollment no :</string>
    <string name="form_pass_type">Pass Type :</string>
    <string name="form_to_date">To Date :</string>
    <string name="form_reason">Reason :</string>
    <string name="btn_apply">Apply</string>
    <string name="GatePass">Gate Pass</string>
    <string name="gallery">Gallery</string>
    <string name="announcement">Announcement</string>
    <string name="Room_Maintence_box">Room Maintence box</string>
    <string name="alert">Alert</string>
    <string name="aboutus">About Us</string>
    <string name="rule">Rules and Regulations</string>

    //Forgot Pwd Activity
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="WelcomeBack">Welcome Back !</string>
    <string name="fp1_text">Don’t Worry \nEnter your email and we’ll \nsend you a verification code to \nreset your password.</string>

    // Dashboard
    <string name="MessMenu">Mess Menu</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="gym">GYM</string>
    <string name="soac">SOAC</string>
    <string name="committee">committee</string>

    //SOAC club dashboard
    <string name="rku_killer_smashers">RKU KILLER SMASHERS</string>
    <string name="zero_violation_club">Zero Violation Club</string>
    <string name="rku_rangers_football_club">RKU RANGERS FOOTBALL</string>
    <string name="the_king_of_64">The King of 64</string>
    <string name="badminton">badminton</string>
    <string name="cricket">Cricket</string>
    <string name="bumblebeez">Bumblebeez</string>
    <string name="soul_of_music_club">soul of Music Club</string>

    //club info activity

    <string name="organization_name">Organization Name :</string>
    <string name="organization_type">Organization Type\t:</string>
    <string name="organization_objectives">Organization \nObjectives :</string>
    <string name="students_committee_members">Students \nCommittee \nmembers :</string>
    <string name="faculty_advisor">Faculty Advisor :</string>
    <string name="membership_fees_and_criteria_to_join_organization">Membership \nfees and \nCriteria to Join \norganization :</string>
    <string name="registration_link">Registration Link :</string>
    <string name="soac_club_name">SOAC Club Name</string>

    //GYM
    <string name="contact_us">Contact Us :</string>
    <string name="apply_for_gym_membership">Apply For Gym membership</string>
    <string name="bhavin_kaneria">Bhavin Kaneria</string>
    <string name="gym_timings">GYM TIMINGS</string>
    <string name="gym_fees_notice">GYM Fees Notice</string>
    <string name="rules">RULES</string>
    <string name="u25cf_if_anyone_doing_gym_without_paying_fees_than_he_is_restricted_from_the_gym_permanently">● If Anyone doing gym without paying fees than he is restricted from the gym permanently.</string>
    <string name="u25cf_form_fill_up_date_to_join_the_gym_is_between_the_first_5_days_of_the_any_month">● form Fill-up date to Join the gym is between the first 5 days of the any month.</string>
    <string name="u25cf_remove_your_shoes_outside_the_gym">● remove your shoes outside the gym</string>
    <string name="u25cf_boys_girls_and_staff_compulsory_fill_the_form_at_the_time_of_joining_the_gym">● Boys , Girls and staff Compulsory fill the form at the time of joining the gym.</string>
    <string name="u25cf_login_entry_is_required_when_you_enter_inside_the_gym">● Login entry is required when you enter inside the gym.</string>
    <string name="u25cf_follow_the_timing_compulsory_and_place_back_the_equipment_in_its_rack">● Follow the timing compulsory and place back the equipment in its rack.</string>
    <string name="u25cf_follow_the_time_slot_mentioned_in_your_from_only_otherwise_you_will_be_disqualified">● Follow the time slot mentioned in your from only otherwise you will be disqualified.</string>


    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="discription">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="room_no">Room No</string>
    <string name="name">Name</string>
    <string name="complain">Complain</string>
    <string name="email">Enter Your Email</string>
    <string name="warning">* Only one room member can compalint from individual room.</string>
    <array name="messmenu">
        <item>International Boys Mess Menu</item>
        <item>International Girls Mess Menu</item>
        <item>Boys Mess Menu</item>
        <item>Girls Mess Menu</item>

    </array>
    <string name="imageDes">Mess Menu Image</string>
</resources>