<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_anno_lay"
    app:cardElevation="200dp"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:padding="5dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/edt_disc"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:hint="@string/discription"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:background="@drawable/edittext_background"
                android:inputType="textMultiLine"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="end">


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="10dp"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>



</androidx.cardview.widget.CardView>