<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_roomNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_no"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tv_complain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complain"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:textSize="18sp" />





    </LinearLayout>
</androidx.cardview.widget.CardView>