<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="30.88dp"
            app:cardElevation="200dp"
            android:layout_marginTop="180dp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/WelcomeBack"
                    android:layout_marginHorizontal="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="18dp"
                    android:textSize="24.71sp"/>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    app:endIconMode="clear_text"
                    android:layout_marginHorizontal="17dp"
                    android:layout_marginTop="50dp"
                    app:startIconDrawable="@drawable/ic_user2"


                    app:boxStrokeColor="@color/red"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"
                    android:textColorHint="#818181"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:paddingTop="15dp"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    android:layout_marginHorizontal="17dp"
                    android:layout_marginTop="20dp"

                    app:boxStrokeColor="@color/red"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"
                    android:textColorHint="#818181"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="300dp"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:paddingTop="15dp"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pass"
                    android:textAlignment="viewEnd"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="17sp"
                    android:textColor="@color/red"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:padding="5dp"
                    android:textSize="20.59sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="35dp"

                    android:layout_marginTop="45dp"
                    android:layout_gravity="center"
                    app:cornerRadius="10dp"
                    android:backgroundTint="#BE1717"
                    android:fontFamily="sans-serif-medium" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="invisible"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginBottom="20dp"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>