<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SOAC_Club_Info"
android:background="@drawable/bgphoto"
android:orientation="vertical">
<include
    layout="@layout/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/black"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="#20ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#ffffff"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">
                <TextView
                    android:id="@+id/tv_cname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soac_club_name"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="15dp"
            app:strokeColor="@color/red"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization_name"
                            android:textStyle="bold"
                            android:layout_weight="2"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/tv_oName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization_name"
                            android:layout_weight="8"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization_type"
                            android:textStyle="bold"
                            android:layout_weight="2"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/tv_oType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization_type"
                            android:layout_weight="8"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization_objectives"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_weight="2"/>
                        <TextView
                            android:id="@+id/tv_oObjective"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/organization_objectives"
                            android:textColor="@color/black"
                            android:layout_weight="8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/students_committee_members"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_weight="2"/>
                        <TextView
                            android:id="@+id/tv_oMember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/students_committee_members"
                            android:textColor="@color/black"
                            android:layout_weight="8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faculty_advisor"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_weight="2"/>
                        <TextView
                            android:id="@+id/tv_oFAdviser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faculty_advisor"
                            android:textColor="@color/black"
                            android:layout_weight="8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/membership_fees_and_criteria_to_join_organization"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_weight="2"/>
                        <TextView
                            android:id="@+id/tv_oFees"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/membership_fees_and_criteria_to_join_organization"
                            android:textColor="@color/black"
                            android:layout_weight="8"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/registration_link"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_weight="2"/>
                        <TextView
                            android:id="@+id/tv_oRLink"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:text="@string/registration_link"
                            android:textColor="@color/black"
                            android:layout_weight="8"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
</LinearLayout>