<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotPassword_1"
    android:orientation="vertical"
    android:background="@color/white">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:lottie_autoPlay="true"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/fp1"
        app:lottie_loop="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/fp1_text"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#7C7C7C"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_weight="4"
                    android:inputType="textEmailAddress"
                    android:textSize="25sp"
                    android:layout_marginHorizontal="31dp"
                    android:layout_marginVertical="10dp"
                    android:drawableStart="@drawable/ic_email"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_background"/>


<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/outlinedTextField"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="30dp"-->
<!--                    android:layout_marginEnd="30dp"-->
<!--                    app:boxStrokeColor="@color/red"-->

<!--                    android:textColor="@color/black"-->
<!--                    app:boxCornerRadiusBottomStart="20dp"-->
<!--                    app:boxCornerRadiusTopEnd="20dp"-->
<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:hint="Enter Your Email"-->
<!--                        android:maxLines="1"-->
<!--                        android:inputType="text"-->
<!--                        />-->

<!--                </com.google.android.material.textfield.TextInputLayout>-->
<!--            -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="@string/login"
                android:textSize="20.59sp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                app:cornerRadius="10dp"
                android:backgroundTint="#BE1717"
                android:fontFamily="sans-serif-medium" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>